--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+ <meta name="description" content= "<%= @item.title%>に関する情報です。この商品を欲しい人、持ってる人を表示しています。">
+ <title><%= @item.title %> - monolistt</title>
+<% end %>
 <div class="container">
   <div class="container-inner inner-sm clearfix">
     <div class="item-single-main">
@@ -22,13 +26,20 @@
         <h4 class="side-box-title">Haveしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Haveしたユーザー一覧 %>
-
+          <% @haves.each do |have| %>
+           <%= link_to gravatar_for(have,size:30),user_path(have) %>
+          
+          <% end %>
         </div>
       </div>
       <div class="side-box">
         <h4 class="side-box-title">Wantしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Wantしたユーザー一覧 %>
+          <% @wants.each do |want| %>
+            <%= link_to gravatar_for(want,size:30), user_path(want) %>
+          
+          <% end %>
         </div>
       </div>
       <div class="text-center">
