--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+ <meta name="description" content= "<%= user.name%>のモノページ。<%= user.name%>の欲しいモノ、持ってるモノを表示しています。">
+ <title><%= user.name %> - monolistt</title>
+<% end %>
 <div class="user-profile">
   <div class="icon">
     <%= gravatar_for user, size: 100 %>
